<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="src-H9-0QA">
    <device id="retina4_0" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Counter View Controller-->
        <scene sceneID="my9-GK-ANl">
            <objects>
                <viewController storyboardIdentifier="CounterViewController" id="9VN-cr-0Qb" customClass="CounterViewController" customModule="Progressus" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="4U1-0Z-49Z"/>
                        <viewControllerLayoutGuide type="bottom" id="UGg-Lx-MCx"/>
                    </layoutGuides>
                    <view key="view" contentMode="redraw" id="oqK-TC-gMn">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
                                        <rect key="frame" x="0.0" y="267" width="320" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="dqC-vT-Z8d" id="owu-tk-9Bc">
                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dark Theme" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="66p-aJ-n71">
                                                    <rect key="frame" x="15" y="11" width="138" height="21"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="138" id="Yyr-br-taa"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                                    <nil key="textColor"/>
...
                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fP9-Wd-GWF">
                                                    <rect key="frame" x="8" y="8" width="304" height="27"/>
                                                    <subviews>
                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Challenge Name" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="wpX-mI-Mb1">
                                                            <rect key="frame" x="0.0" y="0.0" width="293.5" height="27"/>
                                                            <accessibility key="accessibilityConfiguration" label="Challenge Name">
                                                                <accessibilityTraits key="traits" searchField="YES"/>
                                                            </accessibility>
                                                            <nil key="textColor"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
...
