...
                _ = CDChallenge.updateChallenge(inContext: context!, unique: challenge!.unique!, with: attr)
            }
            
            if shouldDismiss {
                dismiss()
            } else {
                let alertController = UIAlertController(title: "Duplicated name", message: "Challenge name should be unique", preferredStyle: .alert)
                alertController.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
                present(alertController, animated: true, completion: {
                    self.nameTextField.text = ""
                })
            }

        } else {
...
